my-simple-stack/0.0.1/README.md
# my-simple-stack

Generated by SUSE AI Factory

## Metadata
- **Name**: my-simple-stack
- **Version**: 0.0.1
- **Description**: This is a simple stack description
- **Support**: opensource
- **Tier**: certified
- **Status**: new
- **Category**: Inference

## Authors
- alessandro.festa1@suse.com (Owner)

## Stack Composition
This stack includes the following components:

- **Ollama** (ollama): Get up and running with Llama 3.2, Mistral, Gemma 2, and other large language models. (Version: )

## Installation
To install this stack on your Kubernetes cluster, ensure you have Helm installed and run:

```bash
helm upgrade --install my-simple-stack ./chart -n my-simple-stack --create-namespace
```

## Upgrade
To upgrade an existing installation with new values or a newer version of the chart:

```bash
helm upgrade my-simple-stack ./chart -n my-simple-stack
```

## Teardown
To remove the stack and all its components from your cluster:

```bash
helm uninstall my-simple-stack -n my-simple-stack
```
